[package]
name = "pw-viz"
description = "A simple and elegant, pipewire graph editor"
authors = ["Atri Sarkar <atrisarkar91@gmail.com>"]
version = "0.1.0"
keywords = ["pipewire", "graph", "editor", "audio", "patchbay"]
categories = ["multimedia::audio", "visualization", "gui"]

repository = "https://github.com/Ax9D/pw-viz"
readme = "README.md"
license = "GPL-3.0-only"

edition = "2021"

[dependencies]
pipewire = "0.4.1"
rand = "0.8.4"
log = {version = "0.4.14", features = ["release_max_level_warn"] }
simple_logger = "1.13.0"

# egui stuff
eframe = { version = "0.15.0", features = ["persistence"] }
egui = "0.15.0"
egui_nodes = {git = "https://github.com/Ax9D/egui_nodes", rev="74eccc4"}
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
